# cpp_mol_connection_tools

./: .gitignore  CMakeLists.txt  compile.bat  get_gro_connectivity.cpp  run_cmake.bat
include/: distance_calculator.hpp  element_table.hpp  molecule.hpp  molecules_box.hpp  utils.hpp
src/: compile.bat  connectivity_analysis.cpp  distance_calculator.cpp  get_gro_connectivity.cpp  gro_file_parser.cpp  main.cpp  molecule_generator.cpp  molecule_utils.cpp  output_writer.cpp  selection_utils.cpp  utils.cpp
